--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>D3 Stock Price Correlation Vis</title>
+    
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script src="./node_modules/d3/dist/d3.js"></script>
 </head>
-
 <body>
-    <h1>Welcome to out repo.</h1>
+    <h1>Project playground</h1>
+    <script src="./main.js"></script>
 </body>
