--- a/line-graph/index.html
+++ b/line-graph/index.html
@@ -1,50 +1,74 @@
 <!DOCTYPE html>
-<svg width="960" height="600"></svg>
+<html>
+<head>
+    <title>cryptovis</title>
+    <style>
+        svg { display: inline-block}
+    </style>
+</head>
+<body>
+<svg width="960" height="600" id="line"></svg>
+<svg width="200" height="600" id="book"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-    var svg = d3.select("svg"),
-
+    var svgBook = d3.select("#book");
+    var svgLine = d3.select("#line"),
         cursorWidth = 16,
         margin = {top: 20, right: 20, bottom: 130, left: 50},
-        width = +svg.attr("width") - margin.left - margin.right,
-        height = +svg.attr("height") - margin.top - margin.bottom,
-        g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+        lineWidth = +svgLine.attr("width") - margin.left - margin.right,
+        bookWidth = +svgBook.attr("width") - margin.left - margin.right,
+        height = +svgLine.attr("height") - margin.top - margin.bottom,
+        gPrice = svgLine.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    var gBook = svgBook.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    var gBook = svgBook.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
     var parseTime = d3.timeParse("%Q");
 
-    var x = d3.scaleTime().rangeRound([0, width]);
+    var xLine = d3.scaleTime().rangeRound([0, lineWidth]);
+    var yLine = d3.scaleLinear().rangeRound([height, 0]);
 
-    var y = d3.scaleLinear().rangeRound([height, 0]);
+    var xBook = d3.scaleLinear().rangeRound([0, bookWidth]);
+    var yBook = d3.scaleLinear().rangeRound([height, 0]);
 
-    var boundText = svg.append('text')
+    var boundText = svgLine.append('text')
         .attr('y', height + margin.top + margin.bottom - 20)
         .attr('x', margin.left)
         .text('Sample');
 
-    var cursorGradient = svg.append('linearGradient')
-        .attr('x1', 0)
-        .attr('x2', 1)
-        .attr('y1', 0)
-        .attr('y2', 0)
-        .attr('id', 'cursorGradient');
-    cursorGradient.append('stop')
-        .attr('offset', 0)
-        .attr('stop-opacity', 0);
-    cursorGradient.append('stop')
-        .attr('offset', 0.5)
-        .attr('stop-color', '#0000ff')
-        .attr('stop-opacity', 0.5);
-    cursorGradient.append('stop')
-        .attr('offset', 1)
-        .attr('stop-opacity', 0);
-
-    var line = d3.line()
+    var cursorGradient = svgLine.append('linearGradient');
+    {
+        cursorGradient.attr('x1', 0)
+            .attr('x2', 1)
+            .attr('y1', 0)
+            .attr('y2', 0)
+            .attr('id', 'cursorGradient');
+        cursorGradient.append('stop')
+            .attr('offset', 0)
+            .attr('stop-opacity', 0);
+        cursorGradient.append('stop')
+            .attr('offset', 0.5)
+            .attr('stop-color', '#0000ff')
+            .attr('stop-opacity', 0.5);
+        cursorGradient.append('stop')
+            .attr('offset', 1)
+            .attr('stop-opacity', 0);
+    }
+    var linePrice = d3.line()
         .x(function (d) {
-            return x(d.date);
+            return xLine(d.date);
         })
         .y(function (d) {
-            return y(d.price);
+            return yLine(d.price);
+        });
+
+    var lineBook = d3.line()
+        .x(function (d) {
+            return xBook(d.total);
+        })
+        .y(function (d) {
+            return yBook(d.price);
         });
 
     d3.tsv("trades.tsv", function (d) {
@@ -54,21 +78,21 @@
     }, function (error, data) {
         if (error) throw error;
 
-        x.domain(d3.extent(data, function (d) {
+        xLine.domain(d3.extent(data, function (d) {
             return d.date;
         }));
-        y.domain(d3.extent(data, function (d) {
+        yLine.domain(d3.extent(data, function (d) {
             return d.price;
         }));
 
-        g.append("g")
+        gPrice.append("g")
             .attr("transform", "translate(0," + height + ")")
-            .call(d3.axisBottom(x))
+            .call(d3.axisBottom(xLine))
             .select(".domain")
             .remove();
 
-        g.append("g")
-            .call(d3.axisLeft(y))
+        gPrice.append("g")
+            .call(d3.axisLeft(yLine))
             .append("text")
             .attr("fill", "#000")
             .attr("transform", "rotate(-90)")
@@ -77,7 +101,7 @@
             .attr("text-anchor", "end")
             .text("Price ($)");
         
-        var inverseX = d3.scaleLinear().domain([0, width]).rangeRound([0, data.length]);
+        var inverseX = d3.scaleLinear().domain([0, lineWidth]).rangeRound([0, data.length]);
 
         function updatePrice(index) {
             boundText.raise().text('Current price ($): ' + data[inverseX(index)].price);
@@ -90,29 +114,34 @@
             d3.select('#cursorLine').attr('x', newValue + cursorWidth / 2 - 1);
             updatePrice(d3.event.x);
         }
-        dataCanvas = g.append("g");
+        dataCanvas = gPrice.append("g");
 
         // Current time selection cursor
         var cursor = dataCanvas.append('g');
-        cursor.append('rect')
-            .attr('x', width / 2)
-            .attr('y', 0)
-            .attr('width', 2)
-            .attr('height', height)
-            .attr('id', 'cursorLine')
-            .style('fill', 'red')
-            .style('opacity', 1);
-        cursor.append('rect')
-            .attr('x', (width - cursorWidth) / 2)
-            .attr('y', 0)
-            .attr('width', cursorWidth)
-            .attr('height', height)
-            .attr('fill', 'url(#cursorGradient)')
-            .attr('opacity', 0)
-            .on('mouseover', function(d, i) { d3.select(this).attr('opacity', 0.3); })
-            .on('mouseout', function(d, i) { d3.select(this).attr('opacity', 0); })
-            .call(d3.drag().on('drag', dragCursor));
-
+        {
+            cursor.append('rect')
+                .attr('x', lineWidth / 2)
+                .attr('y', 0)
+                .attr('width', 2)
+                .attr('height', height)
+                .attr('id', 'cursorLine')
+                .style('fill', 'red')
+                .style('opacity', 1);
+            cursor.append('rect')
+                .attr('x', (lineWidth - cursorWidth) / 2)
+                .attr('y', 0)
+                .attr('width', cursorWidth)
+                .attr('height', height)
+                .attr('fill', 'url(#cursorGradient)')
+                .attr('opacity', 0)
+                .on('mouseover', function (d, i) {
+                    d3.select(this).attr('opacity', 0.3);
+                })
+                .on('mouseout', function (d, i) {
+                    d3.select(this).attr('opacity', 0);
+                })
+                .call(d3.drag().on('drag', dragCursor));
+        }
         // Price line graph / Path 
         dataCanvas.append("path")
             .datum(data)
@@ -121,8 +150,50 @@
             .attr("stroke-linejoin", "round")
             .attr("stroke-linecap", "round")
             .attr("stroke-width", 1.5)
-            .attr("d", line)
+            .attr("d", linePrice)
             .on('loaded', updatePrice(data.length / 2));
     });
+    d3.json("../processed_book.json", function (error, data) {
+        console.log(error);
+        console.log(data);
+        data = data.asks;
+        xBook.domain(d3.extent(data, function (d) {
+            return d.total;
+        }));
+        yBook.domain(d3.extent(data, function (d) {
+             return d.price;
+        }));
 
+        gBook.append("g")
+            .call(d3.axisLeft(yBook))
+            .append("text")
+            .attr("fill", "#000")
+            .attr("transform", "rotate(-90)")
+            .attr("y", 6)
+            .attr("dy", "0.71em")
+            .attr("text-anchor", "end")
+            .text("Price ($)");
+        gBook.append("g")
+            .attr("transform", "translate(0," + height + ")")
+            .call(d3.axisBottom(xBook))
+            .selectAll("text")  // turn labels 90°
+                .attr("y", 0)
+                .attr("x", 9)
+                .attr("dy", ".35em")
+                .attr("transform", "rotate(90)")
+                .style("text-anchor", "start");
+        bookCanvas = gBook.append("g");
+
+        bookCanvas.append("path")
+            .datum(data)
+            .attr("fill", "none")
+            .attr("stroke", "green")
+            .attr("stroke-linejoin", "round")
+            .attr("stroke-linecap", "round")
+            .attr("stroke-width", 2.5)
+            .attr("d", lineBook)
+            .on('loaded', updatePrice(data.length / 2));
+    });
 </script>
+</body>
+</html>
