--- a/line-graph/index.html
+++ b/line-graph/index.html
@@ -10,73 +10,30 @@
 <svg width="960" height="600" id="line"></svg>
 <svg width="200" height="600" id="book"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="/node_modules/d3-queue/build/d3-queue.js"></script>
 <script>
-    var svgBook = d3.select("#book");
-    var svgLine = d3.select("#line"),
-        cursorWidth = 16,
-        margin = {top: 20, right: 20, bottom: 130, left: 50},
-        lineWidth = +svgLine.attr("width") - margin.left - margin.right,
-        bookWidth = +svgBook.attr("width") - margin.left - margin.right,
-        height = +svgLine.attr("height") - margin.top - margin.bottom,
-        gPrice = svgLine.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-    var gBook = svgBook.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-    var gBook = svgBook.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    // load data files
+    d3.queue()
+        .defer(d3.tsv, "trades.tsv", function (d) {
+            d.date = parseTime(d.date);
+            d.price = +d.price;
+            return d;
+        })
+        .defer(d3.json, "../processed_book.json")
+        .await(analyze);
 
-    var parseTime = d3.timeParse("%Q");
+    function analyze(error, trades, book) {
+        if(error) { console.log(error); }
 
-    var xLine = d3.scaleTime().rangeRound([0, lineWidth]);
-    var yLine = d3.scaleLinear().rangeRound([height, 0]);
+        console.log("trades", trades);
+        console.log("book", book);
 
-    var xBook = d3.scaleLinear().rangeRound([0, bookWidth]);
-    var yBook = d3.scaleLinear().rangeRound([height, 0]);
-
-    var boundText = svgLine.append('text')
-        .attr('y', height + margin.top + margin.bottom - 20)
-        .attr('x', margin.left)
-        .text('Sample');
-
-    var cursorGradient = svgLine.append('linearGradient');
-    {
-        cursorGradient.attr('x1', 0)
-            .attr('x2', 1)
-            .attr('y1', 0)
-            .attr('y2', 0)
-            .attr('id', 'cursorGradient');
-        cursorGradient.append('stop')
-            .attr('offset', 0)
-            .attr('stop-opacity', 0);
-        cursorGradient.append('stop')
-            .attr('offset', 0.5)
-            .attr('stop-color', '#0000ff')
-            .attr('stop-opacity', 0.5);
-        cursorGradient.append('stop')
-            .attr('offset', 1)
-            .attr('stop-opacity', 0);
+        priceLine(trades);
+        orderBook(book);
     }
-    var linePrice = d3.line()
-        .x(function (d) {
-            return xLine(d.date);
-        })
-        .y(function (d) {
-            return yLine(d.price);
-        });
 
-    var lineBook = d3.line()
-        .x(function (d) {
-            return xBook(d.total);
-        })
-        .y(function (d) {
-            return yBook(d.price);
-        });
-
-    d3.tsv("trades.tsv", function (d) {
-        d.date = parseTime(d.date);
-        d.price = +d.price;
-        return d;
-    }, function (error, data) {
-        if (error) throw error;
-
+    function priceLine(data)  {
         xLine.domain(d3.extent(data, function (d) {
             return d.date;
         }));
@@ -99,7 +56,7 @@
             .attr("dy", "0.71em")
             .attr("text-anchor", "end")
             .text("Price ($)");
-        
+
         var inverseX = d3.scaleLinear().domain([0, lineWidth]).rangeRound([0, data.length]);
 
         function updatePrice(index) {
@@ -141,7 +98,7 @@
                 })
                 .call(d3.drag().on('drag', dragCursor));
         }
-        // Price line graph / Path 
+        // Price line graph / Path
         dataCanvas.append("path")
             .datum(data)
             .attr("fill", "none")
@@ -151,9 +108,70 @@
             .attr("stroke-width", 1.5)
             .attr("d", linePrice)
             .on('loaded', updatePrice(data.length / 2));
-    });
-    d3.json("../processed_book.json", function (error, data) {
-        console.log(error);
+    }
+
+    var cursorWidth = 16,
+        margin = {top: 20, right: 20, bottom: 130, left: 50};
+
+    var parseTime = d3.timeParse("%Q");
+
+    // price line
+    var svgLine = d3.select("#line"),
+        lineWidth = +svgLine.attr("width") - margin.left - margin.right,
+        height = +svgLine.attr("height") - margin.top - margin.bottom,
+        gPrice = svgLine.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    var xLine = d3.scaleTime().rangeRound([0, lineWidth]);
+    var yLine = d3.scaleLinear().rangeRound([height, 0]);
+
+    var linePrice = d3.line()
+        .x(function (d) {
+            return xLine(d.date);
+        })
+        .y(function (d) {
+            return yLine(d.price);
+        });
+
+    // cursor
+    var boundText = svgLine.append('text')
+        .attr('y', height + margin.top + margin.bottom - 20)
+        .attr('x', margin.left)
+        .text('Sample');
+
+    var cursorGradient = svgLine.append('linearGradient').
+    cursorGradient.attr('x1', 0)
+        .attr('x2', 1)
+        .attr('y1', 0)
+        .attr('y2', 0)
+        .attr('id', 'cursorGradient');
+    cursorGradient.append('stop')
+        .attr('offset', 0)
+        .attr('stop-opacity', 0);
+    cursorGradient.append('stop')
+        .attr('offset', 0.5)
+        .attr('stop-color', '#0000ff')
+        .attr('stop-opacity', 0.5);
+    cursorGradient.append('stop')
+        .attr('offset', 1)
+        .attr('stop-opacity', 0);
+
+    // order book
+    var svgBook = d3.select("#book"),
+        bookWidth = +svgBook.attr("width") - margin.left - margin.right,
+        gBook = svgBook.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    var xBook = d3.scaleLinear().rangeRound([0, bookWidth]);
+    var yBook = d3.scaleLinear().rangeRound([height, 0]);
+
+    var lineBook = d3.line()
+        .x(function (d) {
+            return xBook(d.total);
+        })
+        .y(function (d) {
+            return yBook(d.price);
+        });
+
+    function orderBook(data) {
         console.log(data);
         //data = data.asks;
         xBook.domain(d3.extent(data.asks, function (d) {
@@ -199,7 +217,7 @@
             .attr("stroke-linecap", "round")
             .attr("stroke-width", 1.5)
             .attr("d", lineBook);
-    });
+    }
 </script>
 </body>
 </html>
