add axis labels

--- a/line-graph/index.html
+++ b/line-graph/index.html
@@ -10,11 +10,14 @@
         #book {
             outline: 1px solid blue;
         }
+        * {
+            font-family: "Arimo", Sans-Serif;
+        }
     </style>
 </head>
 <body>
 <svg width="960" height="600" id="line"></svg>
-<svg width="200" height="600" id="book"></svg>
+<svg width="500" height="600" id="book"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="/node_modules/d3-queue/build/d3-queue.js"></script>
 <script>
@@ -59,8 +62,15 @@
         gPrice.append("g")
             .attr("transform", "translate(0," + height + ")")
             .call(d3.axisBottom(xLine))
-            .select(".domain")
-            .remove();
+            .append("text")
+            .attr("fill", "#000")
+            .attr("x", 20)
+            .attr("y", 25)
+            .attr("dy", "0.71em")
+            .attr("text-anchor", "end")
+            .text("Time");
+            //.select(".domain")
+            //.remove();
 
         gPrice.append("g")
             .call(d3.axisLeft(yLine))
@@ -194,7 +204,7 @@
     function orderBook(data) {
         console.log(data);
         //data = data.asks;
-        xBook.domain([-3,maxTotal]);
+        xBook.domain([-1,maxTotal]);
         //xBook.domain(d3.extent(data.asks, function (d) {
         //    return d.total;
         //}));
@@ -217,7 +227,18 @@
                 .attr("x", 9)
                 .attr("dy", ".35em")
                 .attr("transform", "rotate(90)")
-                .style("text-anchor", "start");
+                .style("text-anchor", "start")
+            ;
+        gBook
+            .append("text")
+            .attr("fill", "#000")
+            .attr("transform", "translate(0," + height + ")")
+            .attr("y", 30)
+            .attr("x", 85)
+            .attr("dy", "0.71em")
+            .attr("text-anchor", "end")
+            .attr("font-size", "8pt")
+            .text("Cumulative Volume");
         bookCanvas = gBook.append("g");
 
         bookCanvas.append("path")   // Bids
