Added volume chart + various minor refactorings.

--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 <body>
     <h1>Project playground</h1>
     <script src="./main.js"></script>
-</body>
+    <a href="./line-graph">Go to our marvelous chart</a>
+</body> 
