--- a/line-graph/index.html
+++ b/line-graph/index.html
@@ -25,6 +25,7 @@
 
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="/node_modules/d3-queue/build/d3-queue.js"></script>
+        <script src="/node_modules/d3-scale-chromatic/d3-scale-chromatic.min.js"></script>
         <script>
             var extent = {};
             var numOrderBookSamples;
