--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
             <svg width="200" height="600" id="booksingle"></svg>
         </div>
 
-        <script src="/static/distd3.v4.min.js"></script>
+        <script src="/static/dist/d3.v4.min.js"></script>
         <script src="/static/dist/d3-queue.js"></script>
         <script src="/static/dist/d3-scale-chromatic.min.js"></script>
         <script>
